tinyc/test/bad/struct-comparison-with-zero.c
struct s
{
    int x;
};

int main()
{
    struct s s;
    s == 0;
    return 0;
}
